# distribuidor-dj

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.real  Procfile  README.md  app.json  heroku.yml  package.json  pyproject.toml  release-tasks.sh  requirements.txt
.github/workflows/: github_registry.yml
django/: .gitignore  manage.py  setup_dev.py
django/.envs/local/: django  postgres
django/distribuidor_dj/: asgi.py  bg_tasks.py  urls.py  wsgi.py
django/distribuidor_dj/apps/api/: apps.py  tests.py  urls.py  views.py
django/distribuidor_dj/apps/auth/: apps.py  urls.py  utils.py  views.py
django/distribuidor_dj/apps/customer/: admin.py  apps.py  models.py  views.py
django/distribuidor_dj/apps/dashboard/: apps.py  forms.py  mixins.py  querys.py  urls.py  views.py
django/distribuidor_dj/apps/home/: apps.py  forms.py  views.py
django/distribuidor_dj/apps/invoice/: admin.py  apps.py  models.py
django/distribuidor_dj/apps/shipment/: admin.py  apps.py  models.py  views.py
django/distribuidor_dj/apps/state/: admin.py  apps.py  models.py
django/distribuidor_dj/settings/: base.py  development.py  production.py
django/distribuidor_dj/utils/: const.py  enum.py
django/fixtures/: address-standalone.json  address-state.json  address.json  bg_task.json  customers.json  dj_groups.json  invoice_bg_task.json  invoices.json  products-standalone.json  shipments.json
django/fixtures/test_data/: check_invoices.json  reportes.json
django/static/js/: dashboard_reports.js
django/templates/: 403.html  base.html  home.html
django/templates/auth/: login.html  register.html
django/templates/components/: footer.html  header.html
django/templates/dashboard/: index.html  invoice-detail.html  invoices.html  payments.html  reportes.html  settings.html  shipments.html
django/templates/partials/: daisy-card.html  form_field.html  pagination.html  render_messages.html
django/templates/shipments/: admin_shipment_detail.html  admin_shipments.html  shipment_detail.html
django/templates/tracking/: index.html  result.html
docs/: demo.md  interaccion-distribuidor-banco.txt
docs/learning-resources/: django.md
(+16 files in other folders)
