[tool.poetry]
name = "distribuidor-repo"
version = "0.1.0"
description = "Proyecto Comercio Electronico"
authors = ["Diego Sánchez <diegosandmg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
psycopg2 = "^2.9.2"
django-environ = "^0.8.1"
djangorestframework = "^3.13.0"
Markdown = "^3.3.6"
drf-spectacular = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
