[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "distribuidor_dj.settings.development"

[tool.poetry]
name = "distribuidor-repo"
version = "0.1.0"
description = "Proyecto Comercio Electronico"
authors = ["Diego Sánchez <diegosandmg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
psycopg2 = "^2.9.2"
django-environ = "^0.8.1"
djangorestframework = "^3.13.0"
Markdown = "^3.3.6"
drf-spectacular = "^0.21.0"
django-tailwind = "^3.0.1"
django-htmx = "^1.6.0"
django-node-assets = "^0.9.10"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
django-heroku = "^0.3.1"
django-widget-tweaks = "^1.4.12"
django-cors-headers = "^3.11.0"
django-q = "^1.3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
django-stubs = "^1.9.0"
djangorestframework-stubs = "^1.4.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
